# frankamera

./: .arcconfig  .gitignore  CMakeLists.txt  Hikvision.cpp  Hikvision.h  README  bearer_auth.py  ffmpeg.py  frankamera  frankamera.json.dist  frankamera.py  hikvision.py  main.cpp  requirements.txt
hikvision/: Camera.py  Exceptions.py  Hikvision.py  Result.py  __init__.py
